--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -11,13 +11,10 @@
 
 .map-container {
   position: relative;
-  width: 100%;
-  height: auto;
-  aspect-ratio: 16 / 9;
-  max-width: 100%;              
-  margin: 0 auto;
+  width: 100vw;
+  height: 100vh; /* Vollbildhöhe */
   background-image: url("bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png");
-  background-size: contain;
+  background-size: cover; /* statt contain */
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -961,6 +958,7 @@ function startBus() {
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
+
 
 
 
