--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -11,10 +11,10 @@
 
 .map-container {
   position: relative;
-  width: 100vw;
-  height: 100vh; /* Vollbildhöhe */
+  width: 100vw;   /* ganze Bildschirmbreite */
+  height: 100vh;  /* ganze Bildschirmhöhe */
   background-image: url("bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png");
-  background-size: cover; /* statt contain */
+  background-size: cover;     /* füllt den Bildschirm, kann Ränder beschneiden */
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -958,6 +958,7 @@ function startBus() {
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
+
 
 
 
