--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -9,7 +9,15 @@
       margin: 0;
     }
 
-
+.map-container {
+  position: relative;
+  width: 100vw;   /* ganze Bildschirmbreite */
+  height: 100vh;  /* ganze Bildschirmhöhe */
+  background-image: url("bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png");
+  background-size: cover;     /* füllt den Bildschirm, kann Ränder beschneiden */
+  background-position: center;
+  background-repeat: no-repeat;
+}
     
 .language-switcher {
   position: absolute;
@@ -950,6 +958,7 @@ function startBus() {
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
+
 
 
 
