--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -9,16 +9,18 @@
       margin: 0;
     }
 
-.map-container {
-  position: relative;
-  width: 100vw;   /* ganze Bildschirmbreite */
-  height: 100vh;  /* ganze Bildschirmhöhe */
-  background-image: url("bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png");
-  background-size: cover;     /* füllt den Bildschirm, kann Ränder beschneiden */
-  background-position: center;
-  background-repeat: no-repeat;
-}
-    
+    .map-container {
+      position: relative;
+      width: 100%;
+      max-width: 1920px;
+      aspect-ratio: 16 / 9;
+      margin: auto;
+      background-image: url("bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png");
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+   }
+
 .language-switcher {
   position: absolute;
   top: 3.6%;
@@ -49,17 +51,16 @@
 
 .info-box {
   position: absolute;
-  background: #fff;
+  background: #FFFFFF;
   border: 4px groove #40e0d0;
-  padding: 12px;
+  padding: 15px;
   border-radius: 10px;
-  box-shadow: 0 8px 16px rgba(0,0,0,0.25);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
   display: none;
-  max-width: clamp(260px, 42vw, 340px);
+  max-width: 300px;
   overflow-y: auto;
   z-index: 12;
   box-sizing: border-box;
-  font-size: clamp(13px, 2.6vw, 16px);
 }
 
 .popup-overlay {
@@ -958,14 +959,6 @@ function startBus() {
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
 
 
 
