--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -101,6 +101,7 @@
     { id:'kids', label:{de:'Kinder & Freizeit', en:'Kids & Leisure'}, areas:['P5','Sandburg','Q1','Q'] },
     { id:'health', label:{de:'Medizin', en:'Medical'}, areas:['MP','Med'] },
     { id:'services', label:{de:'Service', en:'Services'}, areas:['Post','Kleiderkammer','Infopoint'] }
+    { id:'beratungen', label:{de:'Beratungen', en:'Support'}, areas:['Post','Kleiderkammer','Infopoint','Beratungen'] }
     // … ergänzen
   ];
 
@@ -180,3 +181,4 @@
 </script>
 </body>
 </html>
+
