--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -78,13 +78,21 @@
     <!-- JS rendert Cards hier hinein -->
   </div>
 
-  <div class="mapwrap" id="mapwrap">
-    <div class="map" id="map">
-      <!-- Beispiel-Pin (Position in %) -->
-      <div class="pin" style="top:58%; left:33%;"><img src="icons/P5Icon.png" alt="P5"/></div>
-      <!-- weitere Pins per JS -->
+<div class="mapwrap" id="mapwrap">
+  <div class="map" id="map">
+    <!-- Beispiel-Pin (Position in %) -->
+    <div class="pin" style="top:58%; left:33%;">
+      <img src="icons/P5Icon.png" alt="P5"/>
     </div>
+
+    <!-- 🔵 NEUER PIN: Krümelecke -->
+    <div class="pin" style="top:45%; left:60%;">
+      <img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/>
+    </div>
+
+    <!-- weitere Pins per JS -->
   </div>
+</div>
 
   <div class="sheet" id="sheet">
     <button class="close" onclick="closeSheet()">×</button>
@@ -180,5 +188,6 @@
 </script>
 </body>
 </html>
+
 
 
