--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -106,7 +106,7 @@
 <script>
   let currentLang = 'de';
   const categories = [
-    { id:'kids', label:{de:'Kinder & Freizeit', en:'Kids & Leisure'}, areas:['P5','Sandburg','Q1','Q'] },
+   { id:'kids', label:{de:'Kinder & Freizeit', en:'Kids & Leisure'}, areas:['P5','Sandburg','Kruemelecke','Q1','Q'] },
     { id:'health', label:{de:'Medizin', en:'Medical'}, areas:['MP','Med'] },
     { id:'services', label:{de:'Service', en:'Services'}, areas:['Post','Kleiderkammer','Infopoint'] }
     // … ergänzen
@@ -188,6 +188,7 @@
 </script>
 </body>
 </html>
+
 
 
 
