--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -37,9 +37,14 @@
   /* Karte (sekundär) */
   .mapwrap { display:none; height:calc(100vh - 112px); } /* sichtbar, wenn "Karte"-Tab aktiv */
   .mapwrap.active { display:block; }
-  .map { position:relative; width:100vw; height:100%; background:#000;
-    background-image:url('bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png');
-    background-size:cover; background-position:center; }
+.map { 
+  position:relative; 
+  width:100vw; 
+  height:100%; 
+  background:#000;
+  background-image:url('bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png');
+  background-size:cover; 
+  background-position:center;
   .pin { position:absolute; width:64px; height:64px; transform:translate(-50%,-50%); }
   .pin img { width:100%; height:100%; }
 
@@ -188,6 +193,7 @@
 </script>
 </body>
 </html>
+
 
 
 
