--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -34,19 +34,37 @@
   .btn { padding:10px 12px; border-radius:10px; background:#111; color:#fff; font-size:14px; border:none; }
   .btn.ghost { background:#fff; color:#111; border:1px solid #ddd; }
 
-  /* Karte (sekundär) */
-  .mapwrap { display:none; height:calc(100vh - 112px); } /* sichtbar, wenn "Karte"-Tab aktiv */
-  .mapwrap.active { display:block; }
-.map { 
-  position:relative; 
-  width:100vw; 
-  height:100%; 
-  background:#000;
-  background-image:url('bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png');
-  background-size:cover; 
-  background-position:center;
-  .pin { position:absolute; width:64px; height:64px; transform:translate(-50%,-50%); }
-  .pin img { width:100%; height:100%; }
+  /* Karte (Interaktive Karte) */
+ .mapwrap { 
+  display:none; 
+  height:calc(100vh - 112px); 
+  overflow:hidden; /* wichtig, damit nichts raussteht */
+}
+.mapwrap.active { display:block; }
+
+.map {
+  position:relative;
+  width:100%;
+  height:100%;
+  touch-action:none; /* verhindert Browser-Scroll statt Pan */
+}
+.map-img {
+  width:100%;
+  height:auto;
+  display:block;
+}
+
+.pin {
+  position:absolute;
+  width:64px;
+  height:64px;
+  transform:translate(-50%,-50%);
+}
+.pin img {
+  width:100%;
+  height:100%;
+}
+
 
   /* Bottom Sheet */
   .sheet { position:fixed; left:0; right:0; bottom:-100%; background:#fff; border-radius:16px 16px 0 0;
@@ -82,20 +100,20 @@
   <div class="list" id="list">
     <!-- JS rendert Cards hier hinein -->
   </div>
-
+  
 <div class="mapwrap" id="mapwrap">
   <div class="map" id="map">
-    <!-- Beispiel-Pin (Position in %) -->
+    <img src="bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png" alt="Karte" class="map-img"/>
+
+    <!-- Beispiel-Pin -->
     <div class="pin" style="top:58%; left:33%;">
       <img src="icons/P5Icon.png" alt="P5"/>
     </div>
 
-    <!-- 🔵 NEUER PIN: Krümelecke -->
+    <!-- 🔵 Krümelecke-Pin -->
     <div class="pin" style="top:45%; left:60%;">
       <img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/>
     </div>
-
-    <!-- weitere Pins per JS -->
   </div>
 </div>
 
@@ -108,17 +126,18 @@
   </div>
 
 <script src="translations.js"></script>
+<script src="https://unpkg.com/@panzoom/panzoom/dist/panzoom.min.js"></script>
 <script>
   let currentLang = 'de';
+  let panzoomInstance;
+
   const categories = [
-   { id:'kids', label:{de:'Kinder & Freizeit', en:'Kids & Leisure'}, areas:['P5','Sandburg','Kruemelecke','Q1','Q'] },
+    { id:'kids', label:{de:'Kinder & Freizeit', en:'Kids & Leisure'}, areas:['P5','Sandburg','Kruemelecke','Q1','Q'] },
     { id:'health', label:{de:'Medizin', en:'Medical'}, areas:['MP','Med'] },
     { id:'services', label:{de:'Service', en:'Services'}, areas:['Post','Kleiderkammer','Infopoint'] }
-    // … ergänzen
   ];
 
   function tLabel(cat){ return cat.label[currentLang] || cat.label.de; }
-
   function setLang(l){ currentLang=l; render(); }
 
   function showList(){
@@ -132,6 +151,16 @@
     document.getElementById('tab-list').classList.remove('active');
     document.getElementById('mapwrap').classList.add('active');
     document.getElementById('list').style.display='none';
+
+    if (!panzoomInstance) {
+      const mapElement = document.getElementById('map');
+      panzoomInstance = Panzoom(mapElement, {
+        maxScale: 3,
+        minScale: 1,
+        contain: 'outside'
+      });
+      mapElement.parentElement.addEventListener('wheel', panzoomInstance.zoomWithWheel);
+    }
   }
 
   function render(){
@@ -193,6 +222,7 @@
 </script>
 </body>
 </html>
+
 
 
 
