--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -179,7 +179,7 @@
 
   const categories = [
     { id:'kids', label:{de:'Kinder & Freizeit', en:'Kids & Leisure'}, areas:['P5','Sandburg','Kruemelecke','Q1','Q'] },
-    { id:'health', label:{de:'Medizin', en:'Medical'}, areas:['MP','Med'] },
+    { id:'health', label:{de:'Medizin', en:'Medical'}, areas:['Med'] },
     { id:'services', label:{de:'Service', en:'Services'}, areas:['Post','Kleiderkammer','Infopoint'] }
   ];
 
@@ -344,3 +344,4 @@
 </script>
 </body>
 </html>
+
