--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -335,7 +335,8 @@
   /* ====== Start ====== */
   render();
   // Optional: Mobile startet gleich mit Karte
-  if (isMobile()) showMap();
+  if (isMobile()) showList();
 </script>
 </body>
 </html>
+
